--- a/whiteboard/index.html
+++ b/whiteboard/index.html
@@ -41,7 +41,7 @@
 	<body>
 		<h1>Ocrad.js Example: Loading from file</h1>
 
-		<script src="http://antimatter15.com/ocrad.js/ocrad.js"></script>
+		<script src="ocrad.js"></script>
 		<script>
 			function recognize_image(){
 				document.getElementById('transcription').innerText = "(Recognizing...)"
