--- a/hmd/index.html
+++ b/hmd/index.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
   </head>
   <body>
+    <audio src="file.mp3" autoplay="autoplay"></audio>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <style>
      .wrapper { 
@@ -74,7 +75,7 @@ background-size: 1800% 1800%;
   document.addEventListener('DOMContentLoaded', function(){
       Typed.new('.element', {
         strings: ["Happy Mother's Day Mommy!", "We love you! ❤️"],
-        typeSpeed: 0
+        typeSpeed: 1
       });
   });
 </script>
