--- a/whiteboard/index.html
+++ b/whiteboard/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Numeric Ocrad.js Example</title>
+		<title>Picture to text</title>
 		<style>
 			body {
 				background: whiteSmoke;
@@ -39,7 +39,7 @@
 		</style>
 	</head>
 	<body>
-		<h1>Ocrad.js Example: Loading from file</h1>
+		<h1>Picture to text test</h1>
 
 		<script src="ocrad.js"></script>
 		<script>
