--- a/bot/index.html
+++ b/bot/index.html
@@ -9,6 +9,6 @@
   <link rel="stylesheet" href="stylesheet.css" type="text/css">
   </head>
   <body>
-  
+    <script src="index.js"></script>
   </body>
 </html>
