--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <audio id="music" preload="auto" type="audio/mpeg"></audio>
 
     <div class="centered">
-      <p id="songName" style="color: white;"></p>
+      <p id="songName"></p>
       <br><br><br>
     </div>
-    <div class="centered" id="audio_player" style="margin: 0 auto;">
+    <div class="centered" id="audio_player">
       <progress id="progress-bar" min="0" max="100" value="0">0% played</progress>
       <button id="btnPlayPause" class="play" title="play" accesskey="P" onclick="playPauseAudio();">⏯</button>
     </div>
-    <p style="position: absolute; bottom: 0; left: 0; color: white; font-size: 14px; letter-spacing: 0.5px;">&nbsp;&#x1F6C8; <a style="color: inherit;" href="/about.html">about</a></p>
+    <p id="about">&nbsp;&#x1F6C8; <a style="color: inherit;" href="/about.html">about</a></p>
   </body>
 </html>
